creating title as my small website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my small website</title>
-    
-    <link rel="stylesheet" href="index.css"">
+
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,9 @@
         <section>
             <h1>Hi, I'm Devendra Baral</h1>
             
-            <p>Welcome to my portfolio website. Here you’ll find my projects, contact details, and a showcase of my work in web development.</p>
+            <p>Elegant, timeless, and crafted with perfection. Shine with Devendra Jewellery. 💍✨
+
+            </p>
 
         </section>
     </main>
