title of my website

--- a/sitereport.html
+++ b/sitereport.html
@@ -32,8 +32,8 @@
 
             <h2>Validation Reports</h2>
             <p>Below are the validation reports ensuring my HTML and CSS follow web standards:</p>
-            <img src="html-validation.png" alt="HTML Validation Screenshot">
-            <img src="css-validation.png" alt="CSS Validation Screenshot">
+            <img src="html.png" alt="HTML Validation Screenshot">
+            <img src="css.png" alt="CSS Validation Screenshot">
 
             <h2>Video Demonstration</h2>
             <p>You can watch the full demonstration of my website <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID" target="_blank">here</a>.</p>
